2008-10-27  Werner Koch  <wk@g10code.com>

	* fipsdrv.c (run_encrypt_decrypt): Make IV_BUFFER optional.
	(main): Ditto.
	* cavs_driver.pl: Remove the --no-fips flags.
	(libgcrypt_encdec($$$$$)): Make IV optional.
	(libgcrypt_state_cipher($$$$$)): Ditto.

2008-10-24  Werner Koch  <wk@g10code.com>

	* benchmark.c (md_bench): Do not test MD5 in fips mode.
	* basic.c (check_digests, check_hmac): Ditto.

2008-10-06  Werner Koch  <wk@g10code.com>

	* cavs_driver.pl: New version from upstream.
	(libgcrypt_rsa_verify($$$$)): Pass pkcs1.
	(libgcrypt_rsa_sign($$$)): Pass pkcs1 and hash algo.

	* fipsdrv.c (run_rsa_sign): Hash data in pkcs1 mode.
	(run_rsa_verify): Ditto.
	(read_key_file): Rename to read_private_key_file.  Factor public
	key code out to..
	(read_public_key_file): .. new.

2008-10-02  Werner Koch  <wk@g10code.com>

	* fipsdrv.c (print_buffer): Add base64 printing code.
	(base64_decode, read_key_file, parse_tag, read_sig_file): New.
	(run_rsa_gen, run_rsa_sign): New.
	(main): Add modes rsa-gen, rsa-sign and rsa-verify.

	
2008-09-29  Werner Koch  <wk@g10code.com>

	* fipsdrv.c: Merge code from fipsrngdrv.c
	* fipsrngdrv.c: Remove.

2008-09-26  Werner Koch  <wk@g10code.com>

	* Makefile.am: Distribute cavs_driver.pl.
	* cavs_tests.sh: New. 
	* fipsdrv.c: New.

2008-09-18  Werner Koch  <wk@g10code.com>

	* benchmark.c (main): Do not disable secure memory in FIPS mode.

2008-09-18  Werner Koch  <wk@g10code.com>

	* basic.c (main): Do not disable secure memory in FIPS mode.

2008-09-16  Werner Koch  <wk@g10code.com>

	* fipsrngdrv.c (main): Bail out on write error.  Implement verbose
	option.
	(main): Use flag to disable dup block checks.

2008-09-15  Werner Koch  <wk@g10code.com>

	* fipsrngdrv.c: New.

2008-09-09  Werner Koch  <wk@g10code.com>

	* basic.c (main): New option --selftest.

2008-08-29  Werner Koch  <wk@g10code.com>

	* keygrip.c: Update to also check ECDSA.

2008-08-28  Werner Koch  <wk@g10code.com>

	* rsa-16k.key: New sample key.
